# omero-mdv

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: Titlow_Davis_YFP_demo.md
omero_mdv/: middleware.py  urls.py  utils.py  views.py
omero_mdv/static/mdv/: choose_data.css  data_model.js
omero_mdv/static/mdv/assets/: AnnotationDialogReact-6e70f00e.js  AnnotationDialogReact-bf6747bc.css  ChartManager-c92981c9.js  MarkdownText-d15485df.js  catColWorker-2a4aab4d.js  catWorker-68e8ef4d.js  deflate-6dead3c3.js  deflate-9e63c8d8.js  index-1747bfdf.js  index-22e1e589.js  index-2be53c31.js  index-627ee5e4.js  index-b4c84a0c.js  jpeg-669f8aa3.js  jpeg-ff17f490.js  lerc-84faa322.js  lerc-aaa05dec.js  lzw-f4ab7302.js  obvios-27bd7269.js  packbits-15c0f976.js  packbits-aa87b871.js  pako.esm-0a50cf5c.js  raw-52896760.js  webimage-683ea181.js
omero_mdv/static/mdv/lit-html_2.8.0/: lit-html.js
omero_mdv/static/omero-mdv/assets/: binWorker-880d69a8.js  boxPlotWorker-d69acdb3.js  densityWorker-2040e813.js  lzw-ed5cc4da.js  obvios-43a071ca.js  obvios-db81a454.css  raw-541ad47d.js  webimage-349ca362.js
omero_mdv/static/omero-mdv/data/: pbmc3k_test.tsv
omero_mdv/static/omero-mdv/src/: obvios.html
omero_mdv/templates/mdv/: choose_data.html  configs.html  index.html
omero_mdv/templates/omero_mdv/: index.html  mdv_index.html
